# pylode

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
pylode/: cli.py  model.py  parser.py
pylode/templates/: base.html  property_entity.html
src/pylode/: __init__.py  cli.py
src/pylode/core/: __init__.py  html_generator.py  ontology_fetcher.py  ontology_processor.py
src/pylode/data/: __init__.py
src/pylode/data/css/: modern.css
src/pylode/data/js/: __init__.py
src/pylode/data/translations/: __init__.py  de.json  en.json  fr.json  it.json
src/pylode/templates/: __init__.py
src/pylode/utils/: __init__.py  mime_types.py
tests/: __init__.py  test_html_generator.py  test_ontology_fetcher.py  test_ontology_processor.py
