[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylode"
version = "0.1.0a1"
description = "Live OWL Documentation Environment - Python CLI tool for generating HTML documentation from OWL ontologies"
readme = "README.md"
authors = [
    {name = "Alessandro Bertozzi", email = "bertozzi@netseven.it"},
]
license = {text = "Apache-2.0"}
keywords = ["owl", "ontology", "documentation", "rdf", "semantic-web"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.8"
dependencies = [
    "rdflib>=6.0.0",
    "owlready2>=0.43",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
    "python-dateutil>=2.8.0",
    "validators>=0.18.0",
    "importlib_resources>=1.3.0;python_version<'3.9'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/essepuntato/LODE"
Documentation = "https://github.com/essepuntato/LODE"
Repository = "https://github.com/essepuntato/LODE"
"Bug Tracker" = "https://github.com/essepuntato/LODE/issues"

[project.scripts]
pylode = "pylode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"pylode" = [
    "templates/*.html",
    "data/translations/*.json",
    "data/css/*.css",
    "data/js/*.js"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pylode --cov-report=term-missing"